[tool.poetry]
name = "fast-api-prac"
version = "0.1.0"
description = ""
authors = ["pavankalyangojju <95854682+pavankalyangojju@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fast_api_prac"}]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.19.0"
fastapi = "^0.86.0"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
